testsuites/LLT/compiler/Diagnose/lex_test/lex_unknown_start_of_token/case4.expect.out
error: unknown start of token: \u{0000}
  ==> case4.cj:13:6:
   | 
13 |     var \u{0000} = \u{0000}
   |         ^^^^^^^^ unknown start of token: \u{0000}
   | 

error: unknown start of token: \u{0000}
  ==> case4.cj:13:10:
   | 
13 |     var \u{0000} = \u{0000}
   |                    ^^^^^^^^ unknown start of token: \u{0000}
   | 

error: unknown start of token: \u{0000}
  ==> case4.cj:14:2:
   | 
14 |     \u{0000}
   |     ^^^^^^^^ unknown start of token: \u{0000}
   | 

3 errors generated, 3 errors printed.
